<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:id="@+id/logindialog"
  android:orientation="vertical"
  >
<LinearLayout
  android:layout_width="450dip"
  android:layout_height="350dip"
  android:id="@+id/logindialog"
  android:orientation="vertical"
  android:gravity="center"
  >
  <TextView
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:text="@string/loginbs"
  android:textStyle="bold"
  android:textSize="22dip"
  android:layout_marginTop="5dip"
  android:textColor="@color/orange"
  android:gravity="center"
  > 
  </TextView>
  <LinearLayout
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:orientation="horizontal"
  android:layout_marginTop="20dip"
  android:gravity="center"
  >
  <TextView
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:text="@string/workerid"
  android:textSize="20dip"
  android:textColor="@color/orange"
  > 
  </TextView>
  <EditText
    android:layout_marginLeft="20dip"
    android:layout_width="150dip"
    android:layout_height="wrap_content"
    android:textSize="18dip"
    android:id="@+id/loginid"
  ></EditText>
  </LinearLayout>
  <LinearLayout
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:orientation="horizontal"
   android:layout_marginTop="20dip"
   android:gravity="center"
  >
  <TextView
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:text="@string/password"
  android:textSize="20dip"
  android:textColor="@color/orange"
  > 
  </TextView>
  <EditText
  android:id="@+id/loginpw"
   android:layout_marginLeft="20dip"
    android:layout_width="150dip"
    android:layout_height="wrap_content"
    android:textSize="20dip"
    android:password="true"
  ></EditText>
  </LinearLayout>
  <LinearLayout
  android:gravity="center"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:orientation="horizontal"
   android:layout_marginTop="20dip"
  >
  <TextView
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:text="@string/isrem"
  android:textSize="20dip"
  android:textColor="@color/orange"
  > 
  </TextView>
  <ToggleButton
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/ischeck"
    android:id="@+id/login_imagebutton"
    android:textOn=""
    android:textOff=""
    android:checked="true"
  ></ToggleButton>
  </LinearLayout>
  <LinearLayout
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:gravity="center"
  android:orientation="horizontal"
  android:layout_marginTop="20dip"
  >
   <Button
   android:layout_width="100dip"
  android:layout_height="50dip"
  android:text="@string/ok"
  android:background="@drawable/buttonbg"
  android:textSize="18dip"
  android:id="@+id/ok"
    android:textColor="@color/orange"
  ></Button>
   <Button
   android:layout_width="100dip"
  android:layout_height="50dip"
  android:text="@string/reset"
  android:background="@drawable/buttonbg"
  android:textSize="18dip"
   android:layout_marginLeft="20dip"
  android:id="@+id/reset"
    android:textColor="@color/orange"
  ></Button>
  </LinearLayout>
</LinearLayout>
</LinearLayout>
